force-app/main/default/objects/TT_Task__c/fields/CourseId__c.field-meta.xml
<CustomField>
    <fullName>CourseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Daily reports</relationshipLabel>
    <relationshipName>Daily_reports</relationshipName>
    <type>Lookup</type>
</CustomField>