force-app/main/default/objects/TT_Task__c/fields/Detailed_description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_description__c</fullName>
    <label>Detailed description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>