force-app/main/default/objects/TT_Task__c/fields/Duration_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_hours__c</fullName>
    <formula>DurationInSeconds__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>