force-app/main/default/objects/TT_Task__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH( DATEVALUE( StartTime__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>