force-app/main/default/objects/TT_Task__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>Please select a project from the Account</errorMessage>
        <filterItems>
            <field>$Source.AccounId__c</field>
            <operation>equals</operation>
            <valueField>Project__c.AccountId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Project__c.Id</field>
            <operation>notEqual</operation>
            <value>a3q1p000000kSnpAAE</value>
        </filterItems>
        <filterItems>
            <field>Project__c.Id</field>
            <operation>equals</operation>
            <value>a3q1p000000kSnpAAE</value>
        </filterItems>
        <filterItems>
            <field>$Source.AccounId__c</field>
            <operation>notEqual</operation>
            <value>00124000010E7r9AAC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Daily reports</relationshipLabel>
    <relationshipName>Daily_reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>