force-app/main/default/objects/TT_Task__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Definición</fullName>
            </value>
            <value>
                <fullName>Prueba de concepto</fullName>
            </value>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>Pruebas</fullName>
            </value>
            <value>
                <fullName>Definición Test Scripts</fullName>
            </value>
            <value>
                <fullName>Ejecución Test Scripts</fullName>
            </value>
            <value>
                <fullName>Soporte pruebas del cliente</fullName>
            </value>
            <value>
                <fullName>Incidencias post-producción</fullName>
            </value>
            <value>
                <fullName>Resolución de dudas</fullName>
            </value>
            <value>
                <fullName>Soporte</fullName>
            </value>
            <value>
                <fullName>Llamadas</fullName>
            </value>
            <value>
                <fullName>Dudas del cliente</fullName>
            </value>
            <value>
                <fullName>Dudas</fullName>
            </value>
            <value>
                <fullName>Solicitud de información</fullName>
            </value>
            <value>
                <fullName>Migración a sandbox</fullName>
            </value>
            <value>
                <fullName>Migración a producción</fullName>
            </value>
            <value>
                <fullName>Calidad de datos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>