force-app/main/default/objects/TT_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reunión</fullName>
                <label>Proyecto - Reunión</label>
            </value>
            <value>
                <fullName>Diseño</fullName>
                <label>Proyecto - Diseño</label>
            </value>
            <value>
                <fullName>Documentación</fullName>
                <label>Proyecto - Documentación</label>
            </value>
            <value>
                <fullName>Configuración</fullName>
                <label>Proyecto - Configuración</label>
            </value>
            <value>
                <fullName>Desarrollo</fullName>
                <label>Proyecto - Desarrollo</label>
            </value>
            <value>
                <fullName>Pruebas</fullName>
                <label>Proyecto - Pruebas</label>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
                <label>Proyecto -  Mantenimiento</label>
            </value>
            <value>
                <fullName>Gestión de proyecto</fullName>
                <label>Proyecto - Gestión de proyecto</label>
            </value>
            <value>
                <fullName>Migración de datos</fullName>
                <label>Proyecto - Migración de datos</label>
            </value>
            <value>
                <fullName>Pase a producción</fullName>
                <label>Proyecto - Pase a producción</label>
            </value>
            <value>
                <fullName>Curso - Preparación del material</fullName>
            </value>
            <value>
                <fullName>Curso - Impartición</fullName>
            </value>
            <value>
                <fullName>Curso - Gestión de alumnos</fullName>
            </value>
            <value>
                <fullName>Curso - Resolución de dudas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>