force-app/main/default/objects/TT_Task__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_reports</relationshipName>
    <type>Lookup</type>
</CustomField>