force-app/main/default/objects/TT_Task__c/validationRules/Course_not_null_if_is_Training_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_not_null_if_is_Training_project</fullName>
    <active>true</active>
    <errorConditionFormula>ProjectId__r.Name = &apos;Training&apos; &amp;&amp; CourseId__c = null</errorConditionFormula>
    <errorDisplayField>CourseId__c</errorDisplayField>
    <errorMessage>If the project is &apos;Training&apos;, the course is required.</errorMessage>
</ValidationRule>