force-app/main/default/objects/TT_Task__c/validationRules/Duration_less_than_24_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_less_than_24_hours</fullName>
    <active>true</active>
    <errorConditionFormula>DurationInSeconds__c &gt; 86399</errorConditionFormula>
    <errorDisplayField>EndTime__c</errorDisplayField>
    <errorMessage>The duration can&apos;t be longer than 24 hours</errorMessage>
</ValidationRule>