force-app/main/default/objects/TT_Task__c/listViews/BasicQueueAmazon_TT_Task.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_TT_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>