force-app/main/default/objects/TT_Task__c/listViews/HHP_Bolsa_de_Horas_001.listView-meta.xml
<ListView>
    <fullName>HHP_Bolsa_de_Horas_001</fullName>
    <columns>Description__c</columns>
    <columns>Duration__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectId__c</field>
        <operation>equals</operation>
        <value>HHP - Bolsa de Horas - 20190605</value>
    </filters>
    <label>HHP - Bolsa de Horas - 20190605</label>
    <sharedTo>
        <group>PartnersCloudCoachers</group>
    </sharedTo>
</ListView>