force-app/main/default/objects/TT_Task__c/listViews/This_Year_Daily_Reports.listView-meta.xml
<ListView>
    <fullName>This_Year_Daily_Reports</fullName>
    <columns>NAME</columns>
    <columns>AccounId__c</columns>
    <columns>ProjectId__c</columns>
    <columns>StartTime__c</columns>
    <columns>Duration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year Daily Reports</label>
</ListView>